Fixed OPEN API Implemented v1/instances/<patient_id>
TODO: /v1/instance
/v1/users/patients
