# models/types/treatment_light.py
@@ -1,0 +1,6 @@
+class TreatmentLight:
+    def __init__(self, treatment_id=None, treatment_name=None, treatment_status=None, treatment_progress=None):
+        self.treatment_id = treatment_id
+        self.treatment_name = treatment_name
+        self.treatment_status = treatment_status
+        self.treatment_progress = treatment_progress
